--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
-  <script src="//at.alicdn.com/t/font_2091480_gxqk6yhp185.js"></script>
+  <title>xinxinui</title>
+  <!-- <script src="//at.alicdn.com/t/font_2091480_gxqk6yhp185.js"></script> -->
 </head>
 <body>
   <div id="app"></div>
